ecmascript/parser/tests/test262-error-references/fail/7de586a1b43f8f7a.js.stderr
error: Unexpected token `.`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/7de586a1b43f8f7a.js:1:15
  |
1 | function* a([a.b]) {}
  |               ^

